PROJECT(visual_librarian)
CMAKE_MINIMUM_REQUIRED(VERSION 3.3 FATAL_ERROR)

FIND_PACKAGE(CURL REQUIRED)
LINK_LIBRARIES(${CURL_LIBRARIES})
INCLUDE_DIRECTORIES(AFTER ${CMAKE_CURRENT_BINARY_DIR} ${CURL_INCLUDE_DIR})

FIND_PACKAGE(OpenCV REQUIRED)
LINK_LIBRARIES(${OpenCV_LIBS})
INCLUDE_DIRECTORIES(AFTER ${CMAKE_CURRENT_BINARY_DIR} ${OpenCV_INCLUDE_DIR})
SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")

ADD_DEFINITIONS(-D_XFEATURES)

ADD_EXECUTABLE(visual_librarian visual_librarian.cpp features.cpp utilities.cpp)

FILE(COPY img DESTINATION ${CMAKE_CURRENT_BINARY_DIR})